name:                WebSite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CarstenKoenig/WebSite#readme
license:             BSD3
license-file:        LICENSE
author:              Carsten König
maintainer:          Carsten@gettingsharper.de
copyright:           2017 Carsten König
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable WebSite
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Layout
                     , Routes
                     , Config
                     , Session
                     , Routes
                     , Utils.Password
                     , Models.BlogPost
                     , Models.Database
                     , Views.AboutMe
                     , Views.BlogPost
                     , Views.Login
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , data-default
                     , Spock >= 0.11
                     , mtl
                     , text
                     , time
                     , wai
                     , warp
                     , http-types >= 0.9.1
                     , blaze-markup
                     , blaze-html
                     , wai-middleware-static >= 0.8.1
                     , lucid >= 2.9.7
                     , reroute >= 0.4.0.1
                     , markdown >= 0.1.14
                     , skylighting >= 0.1.1.5
                     , cryptohash >= 0.11.9
                     , bytestring >= 0.10.8
                     , persistent
                     , persistent-postgresql >= 2.6 && < 2.7
                     , persistent-template
                     , monad-logger
                     , resource-pool
                     
