name:                WebSite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CarstenKoenig/WebSite#readme
license:             BSD3
license-file:        LICENSE
author:              Carsten König
maintainer:          Carsten@gettingsharper.de
copyright:           2017 Carsten König
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable WebSite
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Layout
                     , Config
                     , Models.BlogCategory
                     , Models.BlogIndex
                     , Models.BlogPost
                     , Models.Database
                     , Models.Events
                     , Models.Projections
                     , Routes
                     , Routes
                     , Session
                     , Utils.Database
                     , Utils.Password
                     , Views.AboutMe
                     , Views.BlogPost
                     , Views.BlogIndex
                     , Views.EditPost
                     , Views.Login
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , aeson
                     , blaze-html
                     , blaze-markup
                     , bytestring >= 0.10.8
                     , cryptohash >= 0.11.9
                     , data-default
                     , http-types >= 0.9.1
                     , hvect
                     , lucid >= 2.9.7
                     , markdown >= 0.1.14
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql >= 2.6 && < 2.7
                     , persistent-template
                     , reroute >= 0.4.0.1
                     , resource-pool
                     , resourcet
                     , skylighting >= 0.1.1.5
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-middleware-static >= 0.8.1
                     , warp
                     
